fix navbar spacing

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,3 +1,4 @@
+/* Imports/Fonts */
 @import url('https://fonts.googleapis.com/css?family=Bellefair|Poppins');
 
 /* About */
@@ -70,7 +71,4 @@ p {font-size: medium;}
 .btn-clear {
   background: rgba(0, 0, 0, 0);
   font-family: 'Bellefair', palatino;
-}
-#bellaNavbar li {
-  vertical-align: center;
 }
